Add fields to NodeDisruption API with documentation

--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -34,13 +34,80 @@ spec:
           spec:
             description: NodeDisruptionSpec defines the desired state of NodeDisruption
             properties:
-              foo:
-                description: Foo is an example field of NodeDisruption. Edit nodedisruption_types.go
-                  to remove/update
-                type: string
+              nodeSelector:
+                description: Label query over nodes that will be impacted by the disruption
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: A label selector requirement is a selector that
+                        contains values, a key, and an operator that relates the key
+                        and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: operator represents a key's relationship to
+                            a set of values. Valid operators are In, NotIn, Exists
+                            and DoesNotExist.
+                          type: string
+                        values:
+                          description: values is an array of string values. If the
+                            operator is In or NotIn, the values array must be non-empty.
+                            If the operator is Exists or DoesNotExist, the values
+                            array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: matchLabels is a map of {key,value} pairs. A single
+                      {key,value} in the matchLabels map is equivalent to an element
+                      of matchExpressions, whose key field is "key", the operator
+                      is "In", and the values array contains only "value". The requirements
+                      are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
             type: object
           status:
             description: NodeDisruptionStatus defines the observed state of NodeDisruption
+              (/!\ it is eventually consistent)
+            properties:
+              disruptedADB:
+                description: List of all the ApplicationDisruptionBudget that are
+                  disrupted by this NodeDisruption
+                items:
+                  description: This is the same as types.NamespacedName but serialisable
+                    to JSON
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
+              disruptedNodes:
+                description: List of all the NDB that are disrupted by this NodeDisruption
+                items:
+                  type: string
+                type: array
+            required:
+            - disruptedADB
+            - disruptedNodes
             type: object
         type: object
     served: true
