--- a/config/samples/nodedisruption_v1alpha1_applicationdisruptionbudget.yaml
+++ b/config/samples/nodedisruption_v1alpha1_applicationdisruptionbudget.yaml
@@ -9,4 +9,6 @@ metadata:
     app.kubernetes.io/created-by: node-disruption-controller
   name: applicationdisruptionbudget-sample
 spec:
-  # TODO(user): Add fields here
+  podSelector: # Select pods to protect by the budget
+    matchLabels:
+      app: nginx
