--- a/config/samples/nodedisruption_v1alpha1_nodedisruption.yaml
+++ b/config/samples/nodedisruption_v1alpha1_nodedisruption.yaml
@@ -9,6 +9,6 @@ metadata:
     app.kubernetes.io/created-by: node-disruption-controller
   name: nodedisruption-sample
 spec:
-  nodeSelector: # Select all the nodes impacted by the disruption
+  nodeSelector:
     matchLabels:
-      kubernetes.io/hostname: fakehostname
+      kubernetes.io/hostname: node
