--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -16,7 +16,11 @@ spec:
     singular: nodedisruption
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.state
+      name: State
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: NodeDisruption is the Schema for the nodedisruptions API
@@ -81,6 +85,12 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              state:
+                default: pending
+                description: Disruption status
+                type: string
+            required:
+            - state
             type: object
           status:
             description: NodeDisruptionStatus defines the observed state of NodeDisruption
