--- a/config/samples/nodedisruption_v1alpha1_nodedisruption.yaml
+++ b/config/samples/nodedisruption_v1alpha1_nodedisruption.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/created-by: node-disruption-controller
   name: nodedisruption-sample
 spec:
+  state: pending
   nodeSelector:
     matchLabels:
       kubernetes.io/hostname: node
