--- a/config/samples/nodedisruption_v1alpha1_applicationdisruptionbudget.yaml
+++ b/config/samples/nodedisruption_v1alpha1_applicationdisruptionbudget.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/created-by: node-disruption-controller
   name: applicationdisruptionbudget-sample
 spec:
+  maxUnavailable: 1
   podSelector: # Select pods to protect by the budget
     matchLabels:
       app: nginx
