Add crd level validation for enum

--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -88,6 +88,10 @@ spec:
               state:
                 default: pending
                 description: Disruption status
+                enum:
+                - pending
+                - granted
+                - rejected
                 type: string
             required:
             - state
