--- a/chart/templates/applicationdisruptionbudget-crd.yaml
+++ b/chart/templates/applicationdisruptionbudget-crd.yaml
@@ -12,10 +12,22 @@ spec:
     kind: ApplicationDisruptionBudget
     listKind: ApplicationDisruptionBudgetList
     plural: applicationdisruptionbudgets
+    shortNames:
+    - adb
     singular: applicationdisruptionbudget
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.maxUnavailable
+      name: Max Unavailable
+      type: integer
+    - jsonPath: .status.disruptionsAllowed
+      name: Disruptions Allowed
+      type: integer
+    - jsonPath: .status.currentDisruptions
+      name: Current Disruptions
+      type: integer
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: ApplicationDisruptionBudget is the Schema for the applicationdisruptionbudgets
@@ -40,10 +52,6 @@ spec:
               maxUnavailable:
                 description: A NodeDisruption is allowed if at most "maxUnavailable"
                   nodes selected by selectors are unavailable after the disruption.
-                type: integer
-              minAvailable:
-                description: A MinAvailable is allowed if at least "MinAvailable" nodes
-                  selected by selectors will still be available after the disruption.
                 type: integer
               podSelector:
                 description: PodSelector query over pods whose nodes are managed by
@@ -135,15 +143,19 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+            required:
+            - maxUnavailable
             type: object
           status:
             description: ApplicationDisruptionBudgetStatus defines the observed state
               of ApplicationDisruptionBudget
             properties:
               currentDisruptions:
+                default: 0
                 description: Number of disruption currently seen on the cluster
                 type: integer
               disruptionsAllowed:
+                default: 0
                 description: Number of disruption allowed on the nodes of this
                 type: integer
               watchedNodes:
@@ -156,7 +168,6 @@ spec:
             required:
             - currentDisruptions
             - disruptionsAllowed
-            - watchedNodes
             type: object
         type: object
     served: true
