--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,6 +5,17 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - nodes
+  - persistentvolumeclaims
+  - persistentvolumes
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - nodedisruption.criteo.com
   resources:
   - applicationdisruptionbudgets
