--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -44,6 +44,32 @@ rules:
 - apiGroups:
   - nodedisruption.criteo.com
   resources:
+  - nodedisruptionbudgets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - nodedisruption.criteo.com
+  resources:
+  - nodedisruptionbudgets/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - nodedisruption.criteo.com
+  resources:
+  - nodedisruptionbudgets/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - nodedisruption.criteo.com
+  resources:
   - nodedisruptions
   verbs:
   - create
