--- a/chart/templates/nodedisruptionbudget-crd.yaml
+++ b/chart/templates/nodedisruptionbudget-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: nodedisruptions.nodedisruption.criteo.com
+  name: nodedisruptionbudgets.nodedisruption.criteo.com
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.0
   labels:
@@ -9,22 +9,32 @@ metadata:
 spec:
   group: nodedisruption.criteo.com
   names:
-    kind: NodeDisruption
-    listKind: NodeDisruptionList
-    plural: nodedisruptions
+    kind: NodeDisruptionBudget
+    listKind: NodeDisruptionBudgetList
+    plural: nodedisruptionbudgets
     shortNames:
-    - nd
-    singular: nodedisruption
+    - ndb
+    singular: nodedisruptionbudget
   scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.state
-      name: State
-      type: string
+    - jsonPath: .spec.maxDisruptedNodes
+      name: Max Disrupted Nodes
+      type: integer
+    - jsonPath: .spec.minUndisruptedNodes
+      name: Min Undisrupted Nodes
+      type: integer
+    - jsonPath: .status.disruptionsAllowed
+      name: Disruptions Allowed
+      type: integer
+    - jsonPath: .status.currentDisruptions
+      name: Current Disruptions
+      type: integer
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: NodeDisruption is the Schema for the nodedisruptions API
+        description: NodeDisruptionBudget is the Schema for the nodedisruptionbudgets
+          API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -39,10 +49,19 @@ spec:
           metadata:
             type: object
           spec:
-            description: NodeDisruptionSpec defines the desired state of NodeDisruption
+            description: NodeDisruptionBudgetSpec defines the desired state of NodeDisruptionBudget
             properties:
+              maxDisruptedNodes:
+                description: A NodeDisruption is allowed if at most "maxDisruptedNodes"
+                  nodes selected by selectors are unavailable after the disruption.
+                type: integer
+              minUndisruptedNodes:
+                description: A NodeDisruption is allowed if at most "minUndisruptedNodes"
+                  nodes selected by selectors are unavailable after the disruption.
+                type: integer
               nodeSelector:
-                description: Label query over nodes that will be impacted by the disruption
+                description: NodeSelector query over pods whose nodes are managed by
+                  the disruption budget.
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -85,58 +104,31 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-              state:
-                default: pending
-                description: Disruption status
-                enum:
-                - pending
-                - granted
-                - rejected
-                type: string
             required:
-            - state
+            - maxDisruptedNodes
+            - minUndisruptedNodes
             type: object
           status:
-            description: NodeDisruptionStatus defines the observed state of NodeDisruption
-              (/!\ it is eventually consistent)
+            description: DisruptionBudgetStatus defines the observed state of ApplicationDisruptionBudget
             properties:
-              disruptedADB:
-                description: List of all the ApplicationDisruptionBudget that are disrupted
-                  by this NodeDisruption
-                items:
-                  description: This is the same as types.NamespacedName but serialisable
-                    to JSON
-                  properties:
-                    name:
-                      type: string
-                    namespace:
-                      type: string
-                  required:
-                  - name
-                  - namespace
-                  type: object
-                type: array
-              disruptedNDB:
-                description: List of all the NodeDisruptionBudget that are disrupted
-                  by this NodeDisruption
-                items:
-                  description: This is the same as types.NamespacedName but serialisable
-                    to JSON
-                  properties:
-                    name:
-                      type: string
-                    namespace:
-                      type: string
-                  required:
-                  - name
-                  - namespace
-                  type: object
-                type: array
-              disruptedNodes:
-                description: List of all the nodes that are disrupted by this NodeDisruption
+              currentDisruptions:
+                default: 0
+                description: Number of disruption currently seen on the cluster
+                type: integer
+              disruptionsAllowed:
+                default: 0
+                description: Number of disruption allowed on the nodes of this
+                type: integer
+              watchedNodes:
+                description: List of nodes that are being watched by the controller
+                  Disruption on this nodes will will be made according to the budget
+                  of this cluster.
                 items:
                   type: string
                 type: array
+            required:
+            - currentDisruptions
+            - disruptionsAllowed
             type: object
         type: object
     served: true
