--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptionbudgets.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptionbudgets.yaml
@@ -4,21 +4,24 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.0
-  name: applicationdisruptionbudgets.nodedisruption.criteo.com
+  name: nodedisruptionbudgets.nodedisruption.criteo.com
 spec:
   group: nodedisruption.criteo.com
   names:
-    kind: ApplicationDisruptionBudget
-    listKind: ApplicationDisruptionBudgetList
-    plural: applicationdisruptionbudgets
+    kind: NodeDisruptionBudget
+    listKind: NodeDisruptionBudgetList
+    plural: nodedisruptionbudgets
     shortNames:
-    - adb
-    singular: applicationdisruptionbudget
-  scope: Namespaced
+    - ndb
+    singular: nodedisruptionbudget
+  scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.maxDisruptions
-      name: Max Unavailable
+    - jsonPath: .spec.maxDisruptedNodes
+      name: Max Disrupted Nodes
+      type: integer
+    - jsonPath: .spec.minUndisruptedNodes
+      name: Min Undisrupted Nodes
       type: integer
     - jsonPath: .status.disruptionsAllowed
       name: Disruptions Allowed
@@ -29,7 +32,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: ApplicationDisruptionBudget is the Schema for the applicationdisruptionbudgets
+        description: NodeDisruptionBudget is the Schema for the nodedisruptionbudgets
           API
         properties:
           apiVersion:
@@ -45,62 +48,19 @@ spec:
           metadata:
             type: object
           spec:
-            description: ApplicationDisruptionBudgetSpec defines the desired state
-              of ApplicationDisruptionBudget
+            description: NodeDisruptionBudgetSpec defines the desired state of NodeDisruptionBudget
             properties:
-              maxDisruptions:
-                description: A NodeDisruption is allowed if at most "maxDisruptions"
+              maxDisruptedNodes:
+                description: A NodeDisruption is allowed if at most "maxDisruptedNodes"
                   nodes selected by selectors are unavailable after the disruption.
                 type: integer
-              podSelector:
-                description: PodSelector query over pods whose nodes are managed by
-                  the disruption budget.
-                properties:
-                  matchExpressions:
-                    description: matchExpressions is a list of label selector requirements.
-                      The requirements are ANDed.
-                    items:
-                      description: A label selector requirement is a selector that
-                        contains values, a key, and an operator that relates the key
-                        and values.
-                      properties:
-                        key:
-                          description: key is the label key that the selector applies
-                            to.
-                          type: string
-                        operator:
-                          description: operator represents a key's relationship to
-                            a set of values. Valid operators are In, NotIn, Exists
-                            and DoesNotExist.
-                          type: string
-                        values:
-                          description: values is an array of string values. If the
-                            operator is In or NotIn, the values array must be non-empty.
-                            If the operator is Exists or DoesNotExist, the values
-                            array must be empty. This array is replaced during a strategic
-                            merge patch.
-                          items:
-                            type: string
-                          type: array
-                      required:
-                      - key
-                      - operator
-                      type: object
-                    type: array
-                  matchLabels:
-                    additionalProperties:
-                      type: string
-                    description: matchLabels is a map of {key,value} pairs. A single
-                      {key,value} in the matchLabels map is equivalent to an element
-                      of matchExpressions, whose key field is "key", the operator
-                      is "In", and the values array contains only "value". The requirements
-                      are ANDed.
-                    type: object
-                type: object
-                x-kubernetes-map-type: atomic
-              pvcSelector:
-                description: PVCSelector query over PVCs whose nodes are managed by
-                  the disruption budget.
+              minUndisruptedNodes:
+                description: A NodeDisruption is allowed if at most "minUndisruptedNodes"
+                  nodes selected by selectors are unavailable after the disruption.
+                type: integer
+              nodeSelector:
+                description: NodeSelector query over pods whose nodes are managed
+                  by the disruption budget.
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -145,7 +105,8 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
             required:
-            - maxDisruptions
+            - maxDisruptedNodes
+            - minUndisruptedNodes
             type: object
           status:
             description: DisruptionBudgetStatus defines the observed state of ApplicationDisruptionBudget
