--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/nodedisruption.criteo.com_nodedisruptions.yaml
 - bases/nodedisruption.criteo.com_applicationdisruptionbudgets.yaml
+- bases/nodedisruption.criteo.com_nodedisruptionbudgets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -11,12 +12,14 @@ patches:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_nodedisruptions.yaml
 #- patches/webhook_in_applicationdisruptionbudgets.yaml
+#- patches/webhook_in_nodedisruptionbudgets.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_nodedisruptions.yaml
 #- patches/cainjection_in_applicationdisruptionbudgets.yaml
+#- patches/cainjection_in_nodedisruptionbudgets.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
