Add new state for node disruption
Add a state to show that a node disruption is in the middle
of processing.

--- a/chart/templates/nodedisruption-crd.yaml
+++ b/chart/templates/nodedisruption-crd.yaml
@@ -92,6 +92,7 @@ spec:
                 - pending
                 - granted
                 - rejected
+                - processing
                 type: string
             required:
             - state
