--- a/chart/templates/nodedisruption-crd.yaml
+++ b/chart/templates/nodedisruption-crd.yaml
@@ -18,7 +18,7 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.state
+    - jsonPath: .status.state
       name: State
       type: string
     name: v1alpha1
@@ -85,17 +85,6 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-              state:
-                default: pending
-                description: Disruption status
-                enum:
-                - pending
-                - granted
-                - rejected
-                - processing
-                type: string
-            required:
-            - state
             type: object
           status:
             description: NodeDisruptionStatus defines the observed state of NodeDisruption
@@ -131,6 +120,15 @@ spec:
                 items:
                   type: string
                 type: array
+              state:
+                default: pending
+                description: Disruption status
+                enum:
+                - pending
+                - granted
+                - rejected
+                - processing
+                type: string
             type: object
         type: object
     served: true
