Remove omitempty on the budget status for Reason and Ok
The Ok field should always be displayed to allow easy debugging
(false is considered empty in Go). Display empty reason is also
more explicit than no reason.

--- a/chart/templates/nodedisruption-crd.yaml
+++ b/chart/templates/nodedisruption-crd.yaml
@@ -113,6 +113,9 @@ spec:
                       - name
                       - namespace
                       type: object
+                  required:
+                  - ok
+                  - reason
                   type: object
                 type: array
               disruptedNodes:
