--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -33,6 +33,7 @@ controllerManager:
     image:
       repository: controller
       tag: latest
+    imagePullPolicy: IfNotPresent
     resources:
       limits:
         cpu: 500m
