--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -44,6 +44,7 @@ controllerManager:
   replicas: 1
   serviceAccount:
     annotations: {}
+  tolerations: {}
 kubernetesClusterDomain: cluster.local
 metricsService:
   ports:
