--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,4 +1,6 @@
 controllerManager:
+  serviceMonitor:
+    enabled: false
   kubeRbacProxy:
     args:
     - --secure-listen-address=0.0.0.0:8443
@@ -23,7 +25,7 @@ controllerManager:
   manager:
     args:
     - --health-probe-bind-address=:8081
-    - --metrics-bind-address=127.0.0.1:8080
+    - --metrics-bind-address=:8080
     - --leader-elect
     containerSecurityContext:
       allowPrivilegeEscalation: false
