--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -100,6 +100,9 @@ spec:
                     description: Enable retrying
                     type: boolean
                 type: object
+              type:
+                description: Type of the node disruption
+                type: string
             type: object
           status:
             description: NodeDisruptionStatus defines the observed state of NodeDisruption
