--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.20
+        go-version: '1.21'
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
