--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,8 +1,27 @@
+version: "2"
 linters:
   enable:
     - revive
-linters-settings:
-  revive:
-    rules:
-      - name: dot-imports
-        disabled: true
+  settings:
+    revive:
+      rules:
+        - name: dot-imports
+          disabled: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
